src/css/exerciseItem.css
.exerciseListItems{
    max-width: 100%;
    align-items: center;
    align-content: center;
    align-self: center;
    flex-wrap: wrap;
}

.exerciseItem {
    align-items: center;
    align-content: center;
    flex: 1;
}

.exerciseName {
    display: block;
    width: 60%;
    margin: 0;
    position: relative;
    top:50%;
    left: 50%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, 50%);
    border-radius: 2px;
    padding: 14px 40px;
    font-size: 25px;
    z-index: 2;
    background-color: #ebebeb;
}

.dropdown_content {
    border-radius: 2px;
    width: 59.8%;
    align-self: center;
    display: block;
    position: relative;
    text-align: center;
    align-items: center;
    padding: 14px 0px;
    border: 1px solid black;
    background-color: #ebebeb;
    z-index: 1;
    top: calc(100% + 10px);
    left: 50%;
    transform: translateX(-50%);
}

